added new end point to get all kv pair
